--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "wcpp",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "C++ for JavaScript",
   "main": "index.js",
   "bin": {
-    "wcpp": "./compile.js"
+    "wcpp": "./compile.js",
+    "wcpp-install": "./install.js"
   },
   "scripts": {
     "test": "nodemon test.js"
@@ -20,5 +21,7 @@
     "url": "https://gitlab.com/brandondyer64/wcpp/issues"
   },
   "homepage": "https://gitlab.com/brandondyer64/wcpp#README",
-  "dependencies": {}
+  "dependencies": {
+    "app-root-path": "^2.1.0"
+  }
 }
